# kinova-ros

kinova_bringup/launch/: kinova_robot_j2s6s200.launch
kinova_control/config/: j2n4s300_control.yaml  j2n4s300_control_back.yaml  j2n6s300_control.yaml  j2s6s300_control.yaml  j2s7s200_control.yaml  j2s7s300_control.yaml  m1n6s200_control.yaml  m1n6s300_control.yaml
kinova_control/launch/: kinova_control.launch  kinova_control_j2s6s200.launch  kinova_control_standalone.launch
kinova_control/src/: move_robot.py
kinova_description/urdf/: j2n4a300.xacro  j2n4a300_standalone.xacro  j2n4s300.xacro  j2n4s300_standalone.xacro  j2n6a300.xacro  j2n6a300_standalone.xacro  j2n6s200.xacro  j2n6s200_standalone.xacro  j2n6s300.xacro  j2n6s300_standalone.xacro  j2n7a300.xacro  j2n7a300_standalone.xacro  j2n7s200.xacro  j2n7s200_standalone.xacro  j2n7s300.xacro  j2n7s300_standalone.xacro  j2s6a300.xacro  j2s6a300_standalone.xacro  j2s6s200.xacro  j2s6s300.xacro  j2s6s300_standalone.xacro  j2s7a300.xacro  j2s7a300_standalone.xacro  j2s7s200.xacro  j2s7s200_standalone.xacro  j2s7s300.xacro  j2s7s300_standalone.xacro  kinova.gazebo  kinova_common.xacro  m1n4a200.xacro  m1n4a200_standalone.xacro  m1n4s200.xacro  m1n4s200_standalone.xacro  m1n6a200.xacro  m1n6a200_standalone.xacro  m1n6a300.xacro  m1n6a300_standalone.xacro  m1n6s200.xacro  m1n6s200_standalone.xacro  m1n6s300.xacro  (+1 more)
kinova_driver/: CMakeLists.txt
kinova_driver/launch/: jaco_arm.launch  mico_arm.launch
kinova_driver/src/: jaco_arm.cpp  jaco_comm.cpp  kinova_arm.cpp  kinova_arm_kinematics.cpp  kinova_comm.cpp  kinova_fingers_action.cpp  kinova_joint_trajectory_controller.cpp  kinova_tool_pose_action.cpp
kinova_gazebo/launch/: arm_launch.launch  robot_launch_j2s6s200.launch
kinova_moveit_servo/: CMakeLists.txt  package.xml
kinova_msgs/: CMakeLists.txt
kinova_pad/: CMakeLists.txt  package.xml
kinova_pad/config/: ps3_kinova_pad.yaml  ps4_kinova_pad.yaml
kinova_pad/launch/: kinova_pad.launch  kinova_pad_jaco.launch  kinova_pad_mico.launch  ps3.yaml
kinova_pad/src/: kinova_pad.cpp
(+33 files in other folders)
