<?xml version="1.0"?>
<package>
  <name>kinova_pad</name>
  <version>0.0.0</version>
  <description>The kinova_pad package</description>

  <maintainer email="info@robotnik.es">trurl</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- build_depend>jaco_msgs</build_depend -->
  <build_depend>kinova_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!-- run_depend>jaco_msgs</run_depend -->
  <run_depend>kinova_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
